--- a/react-app/package.json
+++ b/react-app/package.json
@@ -14,6 +14,7 @@
     "react-markdown": "^8.0.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
+    "react-transition-group": "^4.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
