--- a/react-app/package.json
+++ b/react-app/package.json
@@ -11,10 +11,12 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-markdown": "^8.0.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "react-transition-group": "^4.4.2",
+    "react-tsparticles": "^1.42.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
